[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Settings Page Scenes/Scripts/GeneralBtnController.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Settings Page Scenes/Scripts/profileBtn.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Settings Page Scenes/Scripts/accountBtn.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Settings Page Scenes/Scripts/tutorialBtn.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GeneralBtnController" type="Node2D"]
script = ExtResource( 1 )

[node name="profileBtn" type="Button" parent="."]
margin_left = 1.0
margin_right = 128.0
margin_bottom = 40.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
text = "Profile"
script = ExtResource( 3 )

[node name="accountBtn" type="Button" parent="."]
margin_left = 204.0
margin_right = 331.0
margin_bottom = 40.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
text = "Account"
script = ExtResource( 4 )

[node name="tutorialBtn" type="Button" parent="."]
margin_left = 407.0
margin_right = 534.0
margin_bottom = 40.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
text = "Tutorials"
script = ExtResource( 5 )

[connection signal="pressed" from="profileBtn" to="profileBtn" method="_on_profileBtn_pressed"]
[connection signal="pressed" from="accountBtn" to="accountBtn" method="_on_accountBtn_pressed"]
[connection signal="pressed" from="tutorialBtn" to="tutorialBtn" method="_on_tutorialBtn_pressed"]
